# tgvoip-contest

./: .gitignore  .gitmodules  CMakeLists.txt  deb-packages.txt  readme.md
misc/: convert_samples.bat  convert_samples.sh  samples_info.txt
opusfile-reader/: CMakeLists.txt  opusfile-reader.cpp  opusfile-reader.h  opusfile-reader_test.cpp  reader.cpp  reader.h  reader_test.cpp
opusfile-writer/: CMakeLists.txt  opusfile-writer.cpp  opusfile-writer.h  opusfile-writer_test.cpp  writer.cpp  writer.h  writer_test.cpp
rate-math/: CMakeLists.txt
rate-math/include/: rate-math.h
rate-math/src/Complex/: Cmplx_AmplPhase.cpp
rate-math/src/Misc/: PowerOfTwo.cpp
rate-math/src/Spectrum/: Helpers.cpp
rate-math/src/Statistics/: Excess.cpp  Mean.cpp  MinMaxMean.cpp  Rms.cpp
rate-math/src/Transform/: Cfft.cpp  Rfft.cpp
tgvoipcall/: CMakeLists.txt  main.cpp
tgvoipcall-runner/: .gitignore  main.py  runner.py
tgvoiprate/: CMakeLists.txt  main.cpp  rate-math.cpp  rate-math.h
tgvoiprate-runner/: main.py  ratings-anal.py  runner.py  voip_contest1_ratings.csv
wavefile-reader/: CMakeLists.txt  wavefile-reader.cpp  wavefile-reader.h
wavefile-writer/: CMakeLists.txt  wavefile-writer.cpp  wavefile-writer.h
